tests/golden/invalid/unknown-var-04.rego
package fregot.tests.invalid.unknown_var_04

test_double {
  double(x, y)
  y == 2
}
